--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser-dynamic": "~12.0.1",
     "@angular/router": "~12.0.1",
     "@swimlane/ngx-datatable": "^19.0.0",
+    "ng-multiselect-dropdown": "^0.3.4",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.4",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
